# TaleForge

./: .gitignore  Cargo.toml  README.md
api-contract/: openapi.yml  openapi_old.yml
app-backend/adapter/: Cargo.toml  Cargo.toml-save
app-backend/adapter/src/persistence/: in_memory_bout_repository.rs  in_memory_location_repository.rs  in_memory_passage_repository.rs  in_memory_player_state_repository.rs  in_memory_repository.rs  mod.rs
app-backend/adapter/src/web/: app_state.rs  mod.rs  server.rs  webserver_interface.rs
app-backend/adapter/src/web/adapter_01_actix/: mod.rs  server.rs
app-backend/adapter/src/web/adapter_01_actix/controllers/: player_controller.rs
app-backend/adapter/src/web/controllers/: player_controller.rs
app-backend/adapter/src/web/option_01_actixweb/: actix_web_server.rs  app_state.rs  mod.rs  server.rs  server2.rs
app-backend/adapter/src/web/option_01_actixweb/controllers/: debug_controller.rs  mod.rs  player_controller.rs
app-backend/adapter/src/web/option_02_hyper/: app_state.rs  app_state_hyper.rs  hyper_server.rs  info.asciidoc  mod.rs
app-backend/adapter/src/web/option_02_openapi/: ApiAdapter.rs  ApiImpl.rs  api_impl.rs  business_adapter_impl.rs  mod.rs
app-backend/adapter/src/web/shared/: MapperTrait.rs  mod.rs  request_mapper_trait.rs  response_mapper_trait.rs
app-backend/adapter/src/web/shared/domain_story_mappers/: PlayerMoveRequestMapper.rs  PlayerMoveResonseMapper.rs  mod.rs  player_move_request_mapper.rs  player_move_resonse_mapper.rs
app-backend/adapter/src/web/shared_models/: MapperTrait.rs  mod.rs
app-backend/application/: Cargo.toml
app-backend/application/src/: lib.rs
app-backend/application/src/contract_implementations/: bout_query_impl.rs  location_query_impl.rs  mod.rs  passage_query_impl.rs  player_state_query_impl.rs
app-backend/application/src/domain_story_impl/: mock_objects_to_debug.rs  mod.rs  move_player_domain_story_impl.rs  move_player_impl.rs  move_player_impl2.rs
app-backend/application/src/dto_domain_mapping/: bout_mapper.rs  location_mapper.rs  mod.rs  passage_mapper.rs  player_state_mapper.rs
app-backend/application/src/query_implementations/: location_query_impl.rs  passage_query_impl.rs
app-backend/application/src/use_case_impl/: move_player_impl.rs
app-backend/application/src/use_cases/: move_player.rs
app-backend/entry_point/: Cargo.toml
app-backend/entry_point/src/: actix_web_server.rs  data_loader.rs  main.rs
app-backend/entry_point/src/service_container/: domain_service_container.rs  domain_story_container.rs  mod.rs  query_container.rs  repository_container.rs  service_container.rs
app-backend/port/: Cargo.toml
app-backend/port/src/: context.rs  game_services.rs  lib.rs  repository.rs
app-backend/port/src/adapters_inbound/: web_server.rs
app-backend/port/src/adapters_outbound/: port_services.rs  repositories.rs  service_container.rs
app-backend/port/src/domain_stories/: move_player.rs
app-backend/port/src/dto/: bout_dto.rs  location_dto.rs  location_mapper.rs  mod.rs  passage_dto.rs  player_state_dto.rs
app-backend/port/src/outbound_adapters/: mod.rs  repositories.rs
app-backend/port/src/port_services/: domain_story_move_player.rs  domain_story_move_player2.rs  mod.rs
app-backend/port/src/repositories/: bout_repository.rs  location_repository.rs  mod.rs  notes  passage_repository.rs  player_state_repository.rs
app-backend/port/src/servers/: web_server.rs
app-backend/port/src/service_container/: domain_story_container.rs  inbound_ports.rs  mod.rs  outbound_adapters.rs  outbound_ports.rs  port_services.rs  repository_container.rs  service_container.rs
app-backend/port/src/use_case/: move_player.rs
(+180 files in other folders)
