[package]
name = "adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
mockall = { version = "0.12.1", optional = true }
serde = { version = "1.0", features = ["derive"] }
port = { path = "../port" }
actix-web = "4.0.0"
actix-rt = "2.2"
serde_json = "1.0.114"

[dev-dependencies]
actix-rt = "2.2"
actix-web = "4.0.0"
mockall = "0.12.1"