[package]
name = "adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
crosscutting = { path = "../crosscutting" }
mockall = { version = "0.12.1", optional = true }
serde = { version = "1.0", features = ["derive"] }
port = { path = "../port" }
actix-web = "4.5.1"
actix-rt = "2.2"
serde_json = "1.0.114"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
async-trait = "^0.1"

[dev-dependencies]
actix-web = "4"
actix-rt = "2.2"
mockall = "0.12.1"
port = { path = "../port", features = ["test-utils"] }
