[package]
name = "application"
version = "0.1.0"
edition = "2021"

[dependencies]
port = { path = "../port" }
domain_contract = { path = "../domain_contract" }
domain_pure = { path = "../domain_pure" }
async-trait = "0.1.80"
tokio = { version = "1", features = ["full", "macros"] }

[dev-dependencies]
mockall = "0.12.1"