[package]
name = "entry_point"
version = "0.1.0"
edition = "2021"


[dependencies]
port = { path = "../port" }
domain_pure = { path = "../domain_pure" }
adapter = { path = "../adapter" }
application = { path = "../application" }

actix-web = "4.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"