[package]
name = "entry_point"
version = "0.1.0"
edition = "2021"

[dependencies]
crosscutting = { path = "../crosscutting" }
adapter = { path = "../adapter" }
port = { path = "../port" }
application = { path = "../application" }
domain_contract = { path = "../domain_contract" }
domain_pure = { path = "../domain_pure" }
tokio = { version = "1", features = ["full"] }

actix-web = "4.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11.3"