[package]
name = "port"
version = "0.1.0"
edition = "2021"

[dependencies]
crosscutting = { path = "../crosscutting" }
domain_pure = { path = "../domain_pure" }
serde = { version = "1.0", features = ["derive"] }
mockall = { version = "0.12.1", optional = true }
serde_json = "1.0.115"
async-trait = "0.1.80"
futures = "0.3"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
assert_cmd = "1.0"
predicates = "1.0"
mockall = "0.12.1"

[features]
mock = ["mockall"]
test-utils = ["mockall"]